src/test/contracts/top_level_patterns/negative/pascaligo/tuple.ligo
const r = (1n, 1, "Hello")
const (a, a, c) = r